<resources>
    <string name="app_name">MajanCalculator</string>
    <string name="fann_text">翻</string>
    <string name="fu_text">符</string>
    <string name="fann_description_spinner">翻数を入力</string>
    <string name="fu_description_spinner">符を入力</string>
    <string name="calculate_result_button">＝</string>
    <string name="parent_switch">親</string>
    <string name="tsumo_switch">ツモ</string>
    <string name="child_switch" />
    <string name="ron_switch">ロン</string>
    <string name="menu_calculate_item">点数計算</string>
    <string name="menu_wait_hand_item">待ち牌表示</string>
    <string name="menu_hand_point_item">和了点計算</string>
    <string name="image_m1_button">select m1 as hands</string>
    <string name="image_m2_button">select m2 as hands</string>
    <string name="image_m3_button">select m3 as hands</string>
    <string name="image_m4_button">select m4 as hands</string>
    <string name="image_m5_button">select m5 as hands</string>
    <string name="image_m6_button">select m6 as hands</string>
    <string name="image_m7_button">select m7 as hands</string>
    <string name="image_m8_button">select m8 as hands</string>
    <string name="image_m9_button">select m9 as hands</string>
    <string name="image_s1_button">select s1 as hands</string>
    <string name="image_s2_button">select s2 as hands</string>
    <string name="image_s3_button">select s3 as hands</string>
    <string name="image_s4_button">select s4 as hands</string>
    <string name="image_s5_button">select s5 as hands</string>
    <string name="image_s6_button">select s6 as hands</string>
    <string name="image_s7_button">select s7 as hands</string>
    <string name="image_s8_button">select s8 as hands</string>
    <string name="image_s9_button">select s9 as hands</string>
    <string name="image_p1_button">select p1 as hands</string>
    <string name="image_p2_button">select p2 as hands</string>
    <string name="image_p3_button">select p3 as hands</string>
    <string name="image_p4_button">select p4 as hands</string>
    <string name="image_p5_button">select p5 as hands</string>
    <string name="image_p6_button">select p6 as hands</string>
    <string name="image_p7_button">select p7 as hands</string>
    <string name="image_p8_button">select p8 as hands</string>
    <string name="image_p9_button">select p9 as hands</string>
    <string name="image_h1_button">select h1 as hands</string>
    <string name="image_h2_button">select h2 as hands</string>
    <string name="image_h3_button">select h3 as hands</string>
    <string name="image_h4_button">select h4 as hands</string>
    <string name="image_h5_button">select h5 as hands</string>
    <string name="image_h6_button">select h6 as hands</string>
    <string name="image_h7_button">select h7 as hands</string>
    <string name="KanItem">カン</string>
    <string name="PonItem">ポン</string>
    <string name="ChiItem">チー</string>
    <string name="AnkanItem">暗カン</string>
    <string name="MinkanItem">明カン</string>
    <string name="LeftChiItem">終点でチー</string>
    <string name="CenterChiItem">中心でチー</string>
    <string name="RightChiItem">始点でチー</string>
    <string name="WaitHandResultButton">待ち牌</string>
    <string name="WaitHandText">待ち牌:</string>
    <string name="OpenDescription">※鳴きは長押し</string>
    <string name="ChiToggleText">チー</string>
    <string name="PonToggleText">ポン</string>
    <string name="AnkanToggleText">暗カン</string>
    <string name="MinkanToggleText">明カン</string>
    <string name="won_tile_description">和了牌</string>
    <string name="doraDescription">ドラ：</string>
    <string name="fieldWindDescription">場風</string>
    <string name="ownWindDescription">自風</string>
    <string name="reachCheck">リーチ</string>
    <string name="doubleReachCheck">ダブルリーチ</string>
    <string name="oneShotCheck">一発</string>
    <string name="haiteiCheck">海底・河底</string>
    <string name="rinshanCheck">嶺上開花</string>
    <string name="chankanCheck">槍槓</string>
    <string name="PointResultButton">点数表示</string>
</resources>