<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="view_model"
            type="com.ishzk.android.majancalculator.ui.CalculatorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DCF3CD"
        tools:context=".ui.CalculatorFragment">

        <Spinner
            android:id="@+id/fannSpinner"
            style="@style/MediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/fann_description_spinner"
            android:entries="@{view_model.fanns}"
            android:selectedItemPosition="@={view_model.fann}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fannText"
            style="@style/SmallText.BoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fann_text"
            app:layout_constraintBottom_toBottomOf="@+id/fannSpinner"
            app:layout_constraintStart_toEndOf="@+id/fannSpinner" />

        <Spinner
            android:id="@+id/fuSpinner"
            style="@style/MediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/fu_description_spinner"
            android:entries="@{view_model.fus}"
            android:selectedItemPosition="@={view_model.fu}"
            app:layout_constraintStart_toEndOf="@+id/fannText"
            app:layout_constraintTop_toTopOf="@+id/fannSpinner" />

        <TextView
            android:id="@+id/fuText"
            style="@style/SmallText.BoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu_text"
            app:layout_constraintBottom_toBottomOf="@+id/fuSpinner"
            app:layout_constraintStart_toEndOf="@+id/fuSpinner" />

        <Button
            android:id="@+id/resultButton"
            style="@style/SquareButton"
            android:layout_marginTop="24dp"
            android:onClick="@{() -> view_model.onClickResultButton()}"
            android:text="@string/calculate_result_button"
            app:layout_constraintStart_toStartOf="@+id/fannSpinner"
            app:layout_constraintTop_toBottomOf="@+id/fannSpinner" />

        <TextView
            android:id="@+id/resultText"
            style="@style/MediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:gravity="center_horizontal|center_vertical"
            android:text="@{view_model.calculateResult.toString()}"
            app:layout_constraintBottom_toBottomOf="@+id/resultButton"
            app:layout_constraintStart_toEndOf="@+id/resultButton"
            app:layout_constraintTop_toTopOf="@+id/resultButton" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/calculateSwtichGroup"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/fuSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fuText"
            app:layout_constraintTop_toTopOf="@+id/fuSpinner">

            <Switch
                android:id="@+id/parentChildSwitch"
                style="@style/MediumSwitch"
                android:checked="@={view_model.isParent}"
                android:text="@string/parent_switch"
                android:textOff="@string/child_switch"
                android:textOn="@string/parent_switch"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/tsumoSwitch"
                style="@style/MediumSwitch"
                android:checked="@={view_model.isTsumo}"
                android:text="@string/tsumo_switch"
                android:textOff="@string/ron_switch"
                android:textOn="@string/tsumo_switch"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>